tree-sitter-osprey/grammar.js
    source_file: ($) => seq(optional($.inner_doc_comment), repeat($.statement)),

    // Every statement ends at its line's end: the trailing `_statement_break`
    // (zero-width, scanner.c) demands a newline, `//` comment, `}`, or EOF
    // before anything else follows. Two constructs on one line are therefore a
    // parse error, never a silent split [LEX-STATEMENT-BREAK].
    statement: ($) =>
      seq(
        choice(
          $.import_statement,
          $.namespace_declaration,
          $.let_declaration,
          $.assignment,
          $.function_declaration,
          $.extern_declaration,
          $.type_declaration,
          $.effect_declaration,
          $.module_declaration,
          $.signature_declaration,
          $.expression_statement,
        ),
        $._statement_break,
      ),

    import_statement: ($) =>
      seq(
        'import',
        choice(
          // Compatibility with the original Default spelling. It lowers to
          // the same namespace + SymbolPath model as `::` imports.
          field('legacy_target', $.legacy_import_path),
          seq(
            field('target', $.import_target),
            optional(field('tail', $.import_tail)),
          ),
        ),
      ),

    legacy_import_path: ($) =>
      seq($.identifier, repeat1(seq('.', $.identifier))),

    import_target: ($) =>
      seq(
        field('namespace', $.namespace_name),
        repeat(seq('::', field('segment', $.identifier))),
      ),

    import_tail: ($) =>
      choice(
        seq('as', field('alias', $.identifier)),
        seq('::', '{', optional($.import_member_list), '}'),
        seq('::', '*'),
      ),

    import_member_list: ($) => sep1(',', $.import_member),
    import_member: ($) =>
      seq(
        field('name', $.identifier),
        optional(seq('as', field('alias', $.identifier))),
      ),

    namespace_name: ($) => choice($.identifier, $.string),

    namespace_declaration: ($) =>
      seq(
        optional($.doc_comment),
        field('keyword', 'namespace'),
        field('name', $.namespace_name),
        choice(';', field('body', $.namespace_body)),
      ),

    let_declaration: ($) =>
      seq(
        optional($.doc_comment),
        field('keyword', choice('let', 'mut')),
        field('name', $.identifier),
        optional(seq(':', field('type', $._type))),
        '=',
        field('value', $.expression),
      ),

    function_declaration: ($) =>
      seq(
        optional($.doc_comment),
        'fn',
        field('name', $.identifier),
        // `fn map<T, U>(...)` — declared type parameters. Implements
        // [TYPE-GENERICS-FN].
        optional(seq('<', field('type_parameters', $.type_parameter_list), '>')),
        '(',
        optional(field('parameters', $.parameter_list)),
        ')',
        optional(seq('->', field('return_type', $._type))),
        optional(field('effects', $.effect_set)),
        choice(
          seq('=', field('body', $.expression)),
          field('body', $.block),
        ),
      ),

    parameter_list: ($) => sep1(',', $.parameter),
    // `_` declares an argument the body ignores. Shared core, not ML sugar:
    // without it ML's `\(acc, _) => …` has no `|acc, _| => …` twin and the pair
    // breaks [FLAVOR-IR-EQUIV]. Implements [PARAM-WILDCARD].
    parameter: ($) =>
      seq(
        field('name', choice($.identifier, '_')),
        optional(seq(':', field('type', $._type))),
      ),

    type_declaration: ($) =>
      seq(
        optional($.doc_comment),
        'type',
        field('name', $.identifier),
        optional(seq('<', field('type_parameters', $.type_parameter_list), '>')),
        '=',
        field('definition', choice($.record_type, $.union_type, $.type_alias)),
        optional($.type_validation),
      ),

    // A type parameter optionally carries declaration-site variance:
    // `out T` (covariant) / `in T` (contravariant). `out`/`in` are contextual
    // keywords reserved only inside `<...>` parameter lists. Implements
    // [TYPE-VARIANCE-DECL].
    union_type: ($) => prec.right(sep1('|', $.variant)),
    variant: ($) =>
      prec.right(
        1,
        seq(
          field('name', choice($.qualified_path, $.identifier)),
          optional(
            choice(
              seq('{', $.field_declarations, '}'),
              seq('(', field('positional', $.positional_payload), ')'),
            ),
          ),
        ),
      ),

    effect_declaration: ($) =>
      seq(
        optional($.doc_comment),
        optional(field('stage', $.static_stage)),
        'effect',
        field('name', $.identifier),
        optional(seq('<', field('type_parameters', $.type_parameter_list), '>')),
        '{',
        repeat($.operation_declaration),
        '}',
      ),
    // `control` declares that answering this operation takes the performer's
    // continuation: the arm returns the HANDLER's answer and may `resume`. An
    // undecorated operation is a value operation whose arm returns the
    // operation's result. Contextual, like the modifiers below.
    // Implements [EFFECTS-HANDLER-ARMS].
    operation_mode: ($) => 'control',
    // How many times an operation's request may be answered — `abort` (never),
    // `once` (the default, at most one) or `many` (any number). A bare keyword
    // node in `static_stage`'s shape, not a general modifier list. Both this
    // and `replayable` are CONTEXTUAL: `word: $.identifier` above means the
    // lexer only reads them as keywords where the parser accepts one, so
    // `abort: fn() -> Unit` still declares an operation called `abort`.
    // Implements [MULTI-DECL].
    multiplicity: ($) => choice('abort', 'once', 'many'),
    // Asserts that performing the operation twice with the same arguments in
    // the same handler context is acceptable to the program — the property a
    // multi-shot handler's replay check reads. Implements [MULTI-REPLAY].
    replayable: ($) => 'replayable',
    // Each operation carries its OWN `///` docs — an effect's operations are
    // independent entry points, so `Prompt.ask` and `Prompt.tell` must hover
    // with their own prose, not the effect's. Implements [DOC-EFFECT-OP].
    operation_declaration: ($) =>
      seq(
        optional($.doc_comment),
        optional(seq(
          field('mode', $.operation_mode),
          optional(field('multiplicity', $.multiplicity)),
        )),
        optional(field('replayable', $.replayable)),
        // The modifier words are also legal operation NAMES. The lexer emits
        // the keyword token wherever a modifier is acceptable, so recovering
        // `abort: fn() -> Unit` cannot be a lexical decision — it is a parse
        // one, and the alias lets GLR carry both readings until `:` (a name)
        // or an identifier (a modifier) settles it. Implements [MULTI-DECL].
        field(
          'name',
          choice(
            $.identifier,
            alias($.operation_mode, $.identifier),
            alias($.multiplicity, $.identifier),
            alias($.replayable, $.identifier),
          ),
        ),
        ':',
        field('type', $._type),
      ),

    // Effect rows reference effects optionally applied to type arguments:
    // `!State<int>`, `![State<int>, Log]`. Implements [EFFECTS-GENERIC-ROWS].
    effect_set: ($) =>
      choice(
        seq('!', $.effect_ref),
        seq('!', '[', $.effect_list, ']'),
      ),
    effect_list: ($) => sep1(',', $.effect_ref),
    effect_ref: ($) => seq(field('name', choice($.qualified_path, $.identifier)), optional($.type_arguments)),

    // ---------- TYPES ----------
    _type: ($) =>
      choice(
        $.function_type,
        $.generic_type,
        $.array_type,
        $.type_identifier,
      ),

    function_type: ($) =>
      choice(
        seq('(', optional($.type_list), ')', '->', $._type),
        seq('fn', '(', optional($.type_list), ')', '->', $._type),
      ),
    generic_type: ($) =>
      seq(field('name', choice($.qualified_path, $.identifier)), '<', $.type_list, '>'),
    type_identifier: ($) => choice($.qualified_path, $.identifier),
    type_list: ($) => sep1(',', $._type),

    // ---------- EXPRESSIONS ----------
    // A leading `///` block documents the statement it precedes — the only way
    // to document a `test("name", …)` case, which is a call expression rather
    // than a declaration. Implements [DOC-ATTACH], [TESTING-DOC].
    expression_statement: ($) => seq(optional($.doc_comment), $.expression),

    expression: ($) =>
      choice(
        $.match_expression,
        $.if_expression,
        $.handler_expression,
        $.handler_value_expression,
        $.kernel_expression,
        $.select_expression,
        $.ternary_expression,
        $.binary_expression,
        $.unary_expression,
        $.pipe_expression,
        $.call_expression,
        $.primary_expression,
      ),

    match_expression: ($) =>
      prec.dynamic(2, seq('match', field('value', $.expression), '{', repeat($.match_arm), '}')),

    match_arm: ($) => seq(field('pattern', $.pattern), '=>', field('body', $.expression)),

    // Populist Default-flavor conditional [GRAMMAR-IF-ELSE]
    // (Kotlin/Swift/Rust shape). Osprey is
    // expression-oriented, so `if` yields a value and the `else` branch is
    // required; each branch is a single expression wrapped in braces. `else if`
    // chains nest into `alternative`. Lowers to the same boolean `match` the
    // ternary desugars to — no new AST node, no type/codegen changes
    // ([FLAVOR-BOUNDARY]). The ML flavor keeps its layout `match`; this
    // spelling is Default-only. The braces here are literal delimiters of the
    // `if`, distinct from a `block` expression, which sidesteps the structural
    // ternary's `cond { field } ? …` form.
    if_expression: ($) =>
      prec.right(
        PREC.ternary,
        seq(
          'if',
          field('condition', $.expression),
          '{',
          field('consequence', $.expression),
          '}',
          'else',
          choice(
            seq('{', field('alternative', $.expression), '}'),
            field('alternative', $.if_expression),
          ),
        ),
      ),

    // A block-scoped handler governs the following statements. Static selection
    // discharges the same region during compilation. Explicit computations use
    // callable handler values. Implements [EFFECTS-HANDLE-REST], [STAGE-HANDLE-STATIC].
    handler_params: ($) => repeat1($.identifier),

    // `kernel E op ... in body` is not a magic block: it is a handler region
    // that supplies the STATIC handlers for the device dialects its body may
    // use, and admits only bodies whose residual dynamic row is empty. Each arm
    // names its effect because one kernel answers several dialects — `Parallel`,
    // `Alloc`, `Tensor` — where `handle` answers exactly one.
    // Implements [STAGE-GPU-KERNEL], [STAGE-GPU-LEGAL].
    kernel_expression: ($) =>
      prec.right(seq('kernel', repeat1($.kernel_arm), 'in', field('body', $.expression))),
    kernel_arm: ($) =>
      seq(field('effect', $.identifier), field('operation', $.identifier), optional($.handler_params), '=>', field('body', $.expression)),

    binary_expression: ($) => {
      const table = [
        ['||', PREC.or],
        ['&&', PREC.and],
        ['==', PREC.compare],
        ['!=', PREC.compare],
        ['<', PREC.compare],
        ['>', PREC.compare],
        ['<=', PREC.compare],
        ['>=', PREC.compare],
        ['+', PREC.add],
        ['-', PREC.add],
        ['*', PREC.mul],
        ['/', PREC.mul],
        ['%', PREC.mul],
      ];
      return choice(
        ...table.map(([op, p]) =>
          prec.left(p, seq(field('left', $.expression), field('operator', op), field('right', $.expression))),
        ),
      );
    },

    pipe_expression: ($) =>
      prec.left(PREC.pipe, seq(field('left', $.expression), '|>', field('right', $.expression))),

    // Left-recursive postfix chain: field access (obj.f), method/function call
    // (f(args)), and index (a[i]) — composes to obj.f.m()[0] naturally.
    call_expression: ($) =>
      prec.left(
        PREC.member,
        seq(
          field('callee', $.expression),
          choice(
            seq('.', field('member', $.identifier)),
            // `f(args)` and `f (args)` both — the argument `(` may be preceded
            // by horizontal space but must stay on the callee's line, which is
            // what `_call_open_gap` (zero-width, src/scanner.c) asserts. That
            // keeps the call binding at PREC.member, so `1 + id (2)` is still
            // `1 + id(2)`, while a `(` opening the next line belongs to that
            // arm's `(a, b)` tuple pattern instead. Implements [PATTERN-TUPLE]
            // coexistence with postfix calls.
            seq($._call_open_gap, '(', optional($.argument_list), ')'),
            // [TYPE-GENERICS-APPLY]: both delimiters abut the call. Alias the
            // immediate opening form to the shared construction-site CST.
            seq(field('type_arguments', alias($._call_type_arguments, $.type_arguments)),
              token.immediate('('), optional($.argument_list), ')'),
            // The index `[` must IMMEDIATELY follow its target — a stricter rule
            // than the call's same-line one, and deliberately so. List-pattern
            // arms are written on ONE line in real source:
            //
            //     match xs { [] => 0  [head, ...tail] => add(head, sumL(tail)) }
            //
            // so a same-line `[` gap would read `0  [head` as an index and
            // break benchmarks/cases/listops/listops.osp. Tuple-pattern arms
            // have no such single-line usage, which is why `(` can afford the
            // looser rule and `[` cannot. Implements [TYPE-LIST-PATTERNS]
            // coexistence with postfix indexing.
            seq(token.immediate('['), field('index', $.expression), ']'),
          ),
        ),
      ),

    argument_list: ($) =>
      choice(
        $.named_argument_list,
        sep1(',', $.expression),
      ),
    primary_expression: ($) =>
      choice(
        $.spawn_expression,
        $.yield_expression,
        $.await_call,
        $.send_call,
        $.recv_call,
        $.perform_expression,
        $.resume_expression,
        $.type_constructor,
        $.update_expression,
        $.block,
        $.object_literal,
        $.literal,
        $.lambda_expression,
        $.qualified_path,
        $.identifier,
        // A handler value needs an effect name and arms. Existing callbacks
        // named `handler` remain ordinary references/calls in other contexts.
        alias('handler', $.identifier),
        seq('(', $.expression, ')'),
      ),

    perform_expression: ($) =>
      seq('perform', field('effect', choice($.qualified_path, $.identifier)), optional(field('instantiation', $.type_arguments)), '.', field('operation', $.identifier), '(', optional($.argument_list), ')'),
    // `resume(v)` resumes the performer's delimited continuation with `v`;
    // `resume()` resumes with Unit. Only legal inside a handler arm body.
    // Implements [EFFECTS-RESUME].
    type_constructor: ($) =>
      prec.dynamic(1, seq(field('name', choice($.qualified_path, $.identifier)), optional($.type_arguments), '{', $.field_assignments, '}')),
    type_arguments: ($) => seq('<', $.type_list, '>'),
    _call_type_arguments: ($) => seq($._type_application_ahead, token.immediate('<'), alias($._call_type_list, $.type_list), '>'),
    // Keep misplaced declaration markers visible for a precise diagnostic.
    field_assignments: ($) => sep1(',', $.field_assignment),
    field_assignment: ($) => seq(field('name', $.identifier), ':', field('value', $.expression)),

    block: ($) => seq('{', repeat($.statement), optional($.expression), '}'),

    integer: ($) => /[0-9]+/,
