tree-sitter-osprey/test/corpus/osprey.txt
================================================================================
Function declaration with typed params, return type, expression body
================================================================================

fn add(a: int, b: int) -> int = a + b

--------------------------------------------------------------------------------

(source_file
  (statement
    (function_declaration
      name: (identifier)
      parameters: (parameter_list
        (parameter
          name: (identifier)
          type: (type_identifier
            (identifier)))
        (parameter
          name: (identifier)
          type: (type_identifier
            (identifier))))
      return_type: (type_identifier
        (identifier))
      body: (expression
        (binary_expression
          left: (expression
            (primary_expression
              (identifier)))
          right: (expression
            (primary_expression
              (identifier))))))))

================================================================================
An explicitly empty effect row is a real function contract [EFFECTS-ROW-POLY]
================================================================================

fn clean() -> int ![] = 42

--------------------------------------------------------------------------------

(source_file
  (statement
    (function_declaration
      name: (identifier)
      return_type: (type_identifier
        (identifier))
      effects: (effect_set)
      body: (expression
        (primary_expression
          (literal
          (integer)))))))

================================================================================
Open effect rows retain fixed labels and the named tail [EFFECTS-ROW-POLY]
================================================================================

fn fixed() ![Log | e] = 42
fn tail() !e = 42
fn bracketed() ![|e] = 42

--------------------------------------------------------------------------------

(source_file
  (statement
    (function_declaration
      name: (identifier)
      effects: (effect_set
        (effect_list
          (effect_ref
            name: (identifier)))
        tail: (identifier))
      body: (expression
        (primary_expression
          (literal
            (integer))))))
  (statement
    (function_declaration
      name: (identifier)
      effects: (effect_set
        (effect_ref
          name: (identifier)))
      body: (expression
        (primary_expression
          (literal
            (integer))))))
  (statement
    (function_declaration
      name: (identifier)
      effects: (effect_set
        tail: (identifier))
      body: (expression
        (primary_expression
          (literal
            (integer)))))))

================================================================================
Union type declaration
================================================================================

type Color = Red | Green | Blue

--------------------------------------------------------------------------------

(source_file
  (statement
    (type_declaration
      name: (identifier)
      definition: (union_type
        (variant
          name: (identifier))
        (variant
          name: (identifier))
        (variant
          name: (identifier))))))

================================================================================
Effect declaration with function-typed operation
================================================================================

effect Log { info: fn(string) -> Unit }

--------------------------------------------------------------------------------

(source_file
  (statement
    (effect_declaration
      name: (identifier)
      (operation_declaration
        name: (identifier)
        type: (function_type
          (type_list
            (type_identifier
              (identifier)))
          (type_identifier
            (identifier)))))))

================================================================================
A modifier keyword naming the operation it modifies [MULTI-DECL]
================================================================================

effect Random {
    /// Answered afresh on every replay.
    control once replayable: fn() -> int
    replayable next: fn() -> int
}

--------------------------------------------------------------------------------

(source_file
  (statement
    (effect_declaration
      name: (identifier)
      (operation_declaration
        (doc_comment)
        mode: (operation_mode)
        multiplicity: (multiplicity)
        name: (identifier)
        type: (function_type
          (type_identifier
            (identifier))))
      (operation_declaration
        replayable: (replayable)
        name: (identifier)
        type: (function_type
          (type_identifier
            (identifier)))))))

================================================================================
Multiplicity and replayable modifiers, and the same words as names [MULTI-DECL]
================================================================================

effect Choice {
    control many replayable pick: fn(int) -> int
    abort: fn() -> Unit
}

--------------------------------------------------------------------------------

(source_file
  (statement
    (effect_declaration
      name: (identifier)
      (operation_declaration
        mode: (operation_mode)
        multiplicity: (multiplicity)
        replayable: (replayable)
        name: (identifier)
        type: (function_type
          (type_list
            (type_identifier
              (identifier)))
          (type_identifier
            (identifier))))
      (operation_declaration
        name: (identifier)
        type: (function_type
          (type_identifier
            (identifier)))))))

================================================================================
Short lambda
================================================================================

let f = |x| => x * 2

--------------------------------------------------------------------------------

(source_file
  (statement
    (let_declaration
      name: (identifier)
      value: (expression
        (primary_expression
          (lambda_expression
            (parameter_list
              (parameter
                name: (identifier)))
            body: (expression
              (binary_expression
                left: (expression
                  (primary_expression
                    (identifier)))
                right: (expression
                  (primary_expression
                    (literal
                      (integer))))))))))))

================================================================================
Match with constructor destructuring and wildcard
================================================================================

let r = match x {
  Ok { value } => value
  _ => 0
}

--------------------------------------------------------------------------------

(source_file
  (statement
    (let_declaration
      name: (identifier)
      value: (expression
        (match_expression
          value: (expression
            (primary_expression
              (identifier)))
          (match_arm
            pattern: (pattern
              name: (identifier)
              (field_pattern
                (identifier)))
            body: (expression
              (primary_expression
                (identifier))))
          (match_arm
            pattern: (pattern)
            body: (expression
              (primary_expression
                (literal
                  (integer))))))))))

================================================================================
if / else-if chain (expression form, else required) [GRAMMAR-IF-ELSE]
================================================================================

let t = if score >= 90 { "A" } else if score >= 80 { "B" } else { "C" }

--------------------------------------------------------------------------------

(source_file
  (statement
    (let_declaration
      name: (identifier)
      value: (expression
        (if_expression
          condition: (expression
            (binary_expression
              left: (expression
                (primary_expression
                  (identifier)))
              right: (expression
                (primary_expression
                  (literal
                    (integer))))))
          consequence: (expression
            (primary_expression
              (literal
                (string))))
          alternative: (if_expression
            condition: (expression
              (binary_expression
                left: (expression
                  (primary_expression
                    (identifier)))
                right: (expression
                  (primary_expression
                    (literal
                      (integer))))))
            consequence: (expression
              (primary_expression
                (literal
                  (string))))
            alternative: (expression
              (primary_expression
                (literal
                  (string))))))))))

================================================================================
Pipe chain (left-associative) with UFCS-style calls
================================================================================

let n = items |> map(double) |> sum()

--------------------------------------------------------------------------------

(source_file
  (statement
    (let_declaration
      name: (identifier)
      value: (expression
        (pipe_expression
          left: (expression
            (pipe_expression
              left: (expression
                (primary_expression
                  (identifier)))
              right: (expression
                (call_expression
                  callee: (expression
                    (primary_expression
                      (identifier)))
                  (argument_list
                    (expression
                      (primary_expression
                        (identifier))))))))
          right: (expression
            (call_expression
              callee: (expression
                (primary_expression
                  (identifier))))))))))

================================================================================
Namespaces and structured imports [MODULES-NAMESPACE] [MODULES-IMPORT]
================================================================================

namespace billing;
import billing::Tax::{addTax, zero as noTax}
import "billing/api" as billingApi
import std.io.file

--------------------------------------------------------------------------------

(source_file
  (statement
    (namespace_declaration
      (namespace_name
        (identifier))))
  (statement
    (import_statement
      (import_target
        (namespace_name
          (identifier))
        (identifier))
      (import_tail
        (import_member_list
          (import_member
            (identifier))
          (import_member
            (identifier)
            (identifier))))))
  (statement
    (import_statement
      (import_target
        (namespace_name
          (string)))
      (import_tail
        (identifier))))
  (statement
    (import_statement
      (legacy_import_path
        (identifier)
        (identifier)
        (identifier)))))

================================================================================
State module, exports, opacity, and signature [MODULES-MODULE] [MODULES-SIGNATURE]
================================================================================

signature StoreSig {
  opaque type Store
  type Count = int
  let zero: Count
  fn empty() -> Store
  effect StoreFx { load: fn() -> Store }
  module Nested : NestedSig + extra
}

state module Storage::Memory : StoreSig + extra {
  mut count = 0
  export opaque type Store = int
  export fn empty() -> Store = count
  export effect StoreFx { load: fn() -> Store }
  export module Nested { export let value = 1 }
}

--------------------------------------------------------------------------------

(source_file
  (statement
    (signature_declaration
      (identifier)
      (signature_item
        (signature_type
          (identifier)))
      (signature_item
        (signature_type
          (identifier)
          (type_identifier
            (identifier))))
      (signature_item
        (signature_value
          (identifier)
          (type_identifier
            (identifier))))
      (signature_item
        (signature_function
          (identifier)
          (type_identifier
            (identifier))))
      (signature_item
        (effect_declaration
          (identifier)
          (operation_declaration
            (identifier)
            (function_type
              (type_identifier
                (identifier))))))
      (signature_item
        (signature_module
          (symbol_path
            (identifier))
          (signature_ascription
            (symbol_path
              (identifier)))))))
  (statement
    (module_declaration
      (symbol_path
        (identifier)
        (identifier))
      (signature_ascription
        (symbol_path
          (identifier)))
      (module_item
        (let_declaration
          (identifier)
          (expression
            (primary_expression
              (literal
                (integer))))))
      (module_item
        (export_declaration
          (type_declaration
            (identifier)
            (union_type
              (variant
                (identifier))))))
      (module_item
        (export_declaration
          (function_declaration
            (identifier)
            (type_identifier
              (identifier))
            (expression
              (primary_expression
                (identifier))))))
      (module_item
        (export_declaration
          (effect_declaration
            (identifier)
            (operation_declaration
              (identifier)
              (function_type
                (type_identifier
                  (identifier)))))))
      (module_item
        (export_declaration
          (module_declaration
            (symbol_path
              (identifier))
            (module_item
              (export_declaration
                (let_declaration
                  (identifier)
                  (expression
                    (primary_expression
                      (literal
                        (integer)))))))))))))

================================================================================
Qualified value, type, constructor, and effect paths [MODULES-FLAVOR-PROJECTION]
================================================================================

fn run(x: billing::Money) -> billing::Result<int> = {
  let money = billing::Money { cents: 1 }
  perform billing::Ledger.post(money)
  billing::Tax::addTax(x)
}

--------------------------------------------------------------------------------

(source_file
  (statement
    (function_declaration
      (identifier)
      (parameter_list
        (parameter
          (identifier)
          (type_identifier
            (qualified_path
              (identifier)
              (identifier)))))
      (generic_type
        (qualified_path
          (identifier)
          (identifier))
        (type_list
          (type_identifier
            (identifier))))
      (expression
        (primary_expression
          (block
            (statement
              (let_declaration
                (identifier)
                (expression
                  (primary_expression
                    (type_constructor
                      (qualified_path
                        (identifier)
                        (identifier))
                      (field_assignments
                        (field_assignment
                          (identifier)
                          (expression
                            (primary_expression
                              (literal
                                (integer)))))))))))
            (statement
              (expression_statement
                (expression
                  (primary_expression
                    (perform_expression
                      (qualified_path
                        (identifier)
                        (identifier))
                      (identifier)
                      (argument_list
                        (expression
                          (primary_expression
                            (identifier)))))))))
            (statement
              (expression_statement
                (expression
                  (call_expression
                    (expression
                      (primary_expression
                        (qualified_path
                          (identifier)
                          (identifier)
                          (identifier))))
                    (argument_list
                      (expression
                        (primary_expression
                          (identifier))))))))))))))

================================================================================
Documented expression statement: `///` above a test case [TESTING-DOC]
================================================================================

/// Addition is commutative.
///
/// # Since
/// 0.3
test("commutes", commutesCase)

test("undocumented", bareCase)

--------------------------------------------------------------------------------

(source_file
  (statement
    (expression_statement
      (doc_comment)
      (expression
        (call_expression
          (expression
            (primary_expression
              (identifier)))
          (argument_list
            (expression
              (primary_expression
                (literal
                  (string))))
            (expression
              (primary_expression
                (identifier))))))))
  (statement
    (expression_statement
      (expression
        (call_expression
          (expression
            (primary_expression
              (identifier)))
          (argument_list
            (expression
              (primary_expression
                (literal
                  (string))))
            (expression
              (primary_expression
                (identifier)))))))))

================================================================================
A kernel region and an instantiated effect mention [STAGE-GPU-KERNEL] [STAGE-SIGNALS-EXACT]
================================================================================

fn main() = kernel
    Tile size => 8
    Alloc scratch bytes => bytes
in perform Signal<Count>.read()

--------------------------------------------------------------------------------

(source_file
  (statement
    (function_declaration
      name: (identifier)
      body: (expression
        (kernel_expression
          (kernel_arm
            effect: (identifier)
            operation: (identifier)
            body: (expression
              (primary_expression
                (literal
                  (integer)))))
          (kernel_arm
            effect: (identifier)
            operation: (identifier)
            (handler_params
              (identifier))
            body: (expression
              (primary_expression
                (identifier))))
          body: (expression
            (primary_expression
              (perform_expression
                effect: (identifier)
                instantiation: (type_arguments
                  (type_list
                    (type_identifier
                      (identifier))))
                operation: (identifier)))))))))

================================================================================
Call-site type application [TYPE-GENERICS-APPLY]
================================================================================

fn main() = identity<int>(5)

--------------------------------------------------------------------------------

(source_file
  (statement
    (function_declaration
      name: (identifier)
      body: (expression
        (call_expression
          callee: (expression
            (primary_expression
              (identifier)))
          type_arguments: (type_arguments
            (type_list
              (type_identifier
                (identifier))))
          (argument_list
            (expression
              (primary_expression
                (literal
                  (integer))))))))))

================================================================================
Call-site type application with two arguments [TYPE-GENERICS-APPLY]
================================================================================

fn main() = pick<int, string>(1, "two")

--------------------------------------------------------------------------------

(source_file
  (statement
    (function_declaration
      name: (identifier)
      body: (expression
        (call_expression
          callee: (expression
            (primary_expression
              (identifier)))
          type_arguments: (type_arguments
            (type_list
              (type_identifier
                (identifier))
              (type_identifier
                (identifier))))
          (argument_list
            (expression
              (primary_expression
                (literal
                  (integer))))
            (expression
              (primary_expression
                (literal
                  (string))))))))))

================================================================================
A nested type argument closes two lists with one angle pair [TYPE-GENERICS-APPLY]
================================================================================

fn main() = identity<List<int>>([1])

--------------------------------------------------------------------------------

(source_file
  (statement
    (function_declaration
      name: (identifier)
      body: (expression
        (call_expression
          callee: (expression
            (primary_expression
              (identifier)))
          type_arguments: (type_arguments
            (type_list
              (generic_type
                name: (identifier)
                (type_list
                  (type_identifier
                    (identifier))))))
          (argument_list
            (expression
              (primary_expression
                (literal
                  (list_literal
                    (expression
                      (primary_expression
                        (literal
                          (integer))))))))))))))

================================================================================
A spaced comparison is not type application [TYPE-GENERICS-APPLY]
================================================================================

fn main() = a < b

--------------------------------------------------------------------------------

(source_file
  (statement
    (function_declaration
      name: (identifier)
      body: (expression
        (binary_expression
          left: (expression
            (primary_expression
              (identifier)))
          right: (expression
            (primary_expression
              (identifier))))))))
